--- a/index.html
+++ b/index.html
@@ -12,33 +12,41 @@
     <title>Booki</title>
 </head>
 <body>
-   <header>
-        <nav>
-        <div id="logo">
-            <img class="logo" src="Images Booki\logo\Booki.png" alt="logo booki" width=50% height=20%/>
+    <header>
+        <div id="header"> 
+            <nav class="nav">
+                <img class="logo" src="Images Booki\logo\Booki.png" alt="logo booki"/>
+            <div id="hebergements-activites">
+                <div id="hebergements">
+                    <a class="link_1" href="hebergements">Hébergements</a>
+                </div>
+                <div id="activites">
+                    <a class="link_2" href="activites">Activités</a>
+                 </div>
+            </nav>
+            </div>
         </div>
-        <div id="hebergements-activites">
-            <a class="link_1" href="hebergements">Hébergements</a>
-            <a class="link_2" href="activites">Activités</a>
-        </div>
-        </nav>
-        <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
-        <p>En plein centre-ville ou en pleine nature</p>
-        <form id=research action="" method="post">
-            <span><i class="fa-solid fa-location-dot"></i></span>
-            <input class="research_input" type="text" placeholder=Marseille,France>
-            <button class="button" type="submit">Rechercher</button>
-        </form>
+            <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
+                <p>En plein centre-ville ou en pleine nature</p>
+            <form id=research action="" method="post">
+                <span><i id=location class="fa-solid fa-location-dot"></i></span>
+                <input class="research_input" type="text" placeholder=Marseille,France>
+                <button class="button" type="submit">Rechercher</button>
+                <i id=research_glass class="fa-solid fa-magnifying-glass"></i>
         <div>
             <h2>Filtres</filtre>
         </div>
+        <div>
         <ul class="liste">
             <li><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</li>
             <li><span><i class="fa-solid fa-child"></i></span>Familiale</li>
             <li><span><i class="fa-solid fa-heart"></i></span>Romantique</li>
             <li><span><i class="fa-solid fa-dog"></i></span>Animaux</li>
         </ul>
-        <p><span><i class="fa-thin fa-circle-info"></i><span>Plus de 500 logements disponibles dans cette ville</p>
+        </div>
+        <div class="infos">
+            <p><i class="fa-light fa-circle-info"></i>Plus de 500 logements disponibles dans cette ville</p>
+        </div>
     </header>
 </body>
 
