--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Booki</title>
 </head>
 <body>
+<!--Header-->
     <header>
         <div id="header"> 
             <nav class="nav">
@@ -24,31 +25,55 @@
                     <a class="link_2" href="activites">Activités</a>
                  </div>
             </nav>
-            </div>
+                </div>
         </div>
             <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
                 <p>En plein centre-ville ou en pleine nature</p>
+<!--Formulaire-->
             <form id=research action="" method="post">
                 <span><i id=location class="fa-solid fa-location-dot"></i></span>
                 <input class="research_input" type="text" placeholder=Marseille,France>
                 <button class="button" type="submit">Rechercher</button>
                 <i id=research_glass class="fa-solid fa-magnifying-glass"></i>
-        <div>
-            <h2>Filtres</filtre>
+<!--Filtres-->
+        <div class="container">
+            <h2>Filtres</h2>
+            <div>
+                <i class="fa-solid fa-money-bill-wave"></i>Economique
+            </div>
+            <div>
+                <i class="fa-solid fa-child"></i>Familiale
+            </div>
+            <div>
+                <i class="fa-solid fa-heart"></i>Romantique
+            </div>
+            <div>
+                <i class="fa-solid fa-dog"></i>Animaux
+            </div>
         </div>
-        <div>
-        <ul class="liste">
-            <li><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</li>
-            <li><span><i class="fa-solid fa-child"></i></span>Familiale</li>
-            <li><span><i class="fa-solid fa-heart"></i></span>Romantique</li>
-            <li><span><i class="fa-solid fa-dog"></i></span>Animaux</li>
-        </ul>
-        </div>
+
         <div class="infos">
-            <p><i class="fa-light fa-circle-info"></i>Plus de 500 logements disponibles dans cette ville</p>
+            <i class="fa-thin fa-circle-info"></i>
+            <p></p>Plus de <a>500</a> logements disponibles dans cette ville</p>
         </div>
     </header>
+<main>
+<!--Card Hébergements à Marseille-->
+    <section class="hébergements à Marseille" id="hebergements">
+        <div class="section 1">
+            <h3 class="h3">Hébergements à Marseille</h3>
+
+        </div>
+        <article >
+
+        </article>
+
+
+    </div>
+
+</main> 
 </body>
+</html>
 
 
         
