--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img class="logo" src="Images Booki\logo\Booki.png" alt="logo booki"/>
             <div id="hebergements-activites">
                 <div id="hebergements">
-                    <a class="link_1" href="hebergements">Hébergements</a>
+                    <a class="link_1" href="#hebergements">Hébergements</a>
                 </div>
                 <div id="activites">
-                    <a class="link_2" href="activites">Activités</a>
+                    <a class="link_2" href="#activites">Activités</a>
                  </div>
             </nav>
                 </div>
@@ -59,18 +59,66 @@
     </header>
 <main>
 <!--Card Hébergements à Marseille-->
-    <section class="hébergements à Marseille" id="hebergements">
-        <div class="section 1">
+<section class="hebergements_a_Marseille" id="marseille">
+        <div class="section_1">
             <h3 class="h3">Hébergements à Marseille</h3>
-
         </div>
-        <article >
-
+        <article class="card_1">
+            <img src="Images Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
+            <p><b>Auberge La Canebière</b></p>
+            <p>Nuit à partir de 2<a>5</a><b>€</b></p>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+        </article>
+        <article class="card_2">
+            <img src="Images Booki\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+            <p><b>Hôtel du port</b></p>
+            <p>Nuit à partir de <a>5</a>2<b>€</b></p>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+        </article>
+        <article class="card_3">
+            <img src="Images Booki\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+            <p><b>Hôtel Les mouettes</b></p>
+            <p>Nuit à partir de <a>7</a>6<b>€</b></p>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+        </article>
+        <article class=card_4>
+            <img src="Images Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+            <p><b>Hôtel de la mer</b></p>
+            <p>Nuit à partir de <a>4</a>6<b>€</b></p>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+        </article>
+        <article class="card_5">
+            <img src="Images Booki\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
+            <p><b>Auberge Le panier</b></p>
+            <p>Nuit à partir de 2<a>3</a><b>€</b></p>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+        </article>
+        <article class="card_6">
+            <img src="Images Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
+            <p><b>Hôtel Chez Amina</b></p>
+            <p>Nuit à partir de <a>9</a>6<b>€</b></p>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
+            <i class="fa-sharp fa-solid fa-star"></i>
         </article>
 
-
-    </div>
-
+</section>
 </main> 
 </body>
 </html>
