--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
         <div class="infos">
             <i class="fa-thin fa-circle-info"></i>
-            <p></p>Plus de <a>500</a> logements disponibles dans cette ville</p>
+            <p>Plus de <a>500</a> logements disponibles dans cette ville</p>
         </div>
     </header>
 <main>
-<!--Card Hébergements à Marseille-->
+<!--Cards Hébergements à Marseille-->
 <section class="hebergements_a_Marseille" id="marseille">
         <div class="section_1">
             <h3 class="h3">Hébergements à Marseille</h3>
         </div>
         <article class="card_1">
-            <img src="Images Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
+            <img class=canebiere src="Images Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
             <p><b>Auberge La Canebière</b></p>
             <p>Nuit à partir de 2<a>5</a><b>€</b></p>
             <i class="fa-sharp fa-solid fa-star"></i>
@@ -73,7 +73,7 @@
             <i class="fa-sharp fa-solid fa-star"></i>
         </article>
         <article class="card_2">
-            <img src="Images Booki\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+            <img class=port src="Images Booki\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
             <p><b>Hôtel du port</b></p>
             <p>Nuit à partir de <a>5</a>2<b>€</b></p>
             <i class="fa-sharp fa-solid fa-star"></i>
@@ -82,7 +82,7 @@
             <i class="fa-sharp fa-solid fa-star"></i>
         </article>
         <article class="card_3">
-            <img src="Images Booki\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+            <img class=mouettes src="Images Booki\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
             <p><b>Hôtel Les mouettes</b></p>
             <p>Nuit à partir de <a>7</a>6<b>€</b></p>
             <i class="fa-sharp fa-solid fa-star"></i>
@@ -91,7 +91,7 @@
             <i class="fa-sharp fa-solid fa-star"></i>
         </article>
         <article class=card_4>
-            <img src="Images Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+            <img class=mer src="Images Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
             <p><b>Hôtel de la mer</b></p>
             <p>Nuit à partir de <a>4</a>6<b>€</b></p>
             <i class="fa-sharp fa-solid fa-star"></i>
@@ -100,7 +100,7 @@
             <i class="fa-sharp fa-solid fa-star"></i>
         </article>
         <article class="card_5">
-            <img src="Images Booki\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
+            <img class=panier src="Images Booki\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
             <p><b>Auberge Le panier</b></p>
             <p>Nuit à partir de 2<a>3</a><b>€</b></p>
             <i class="fa-sharp fa-solid fa-star"></i>
@@ -109,7 +109,7 @@
             <i class="fa-sharp fa-solid fa-star"></i>
         </article>
         <article class="card_6">
-            <img src="Images Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
+            <img class=amina src="Images Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
             <p><b>Hôtel Chez Amina</b></p>
             <p>Nuit à partir de <a>9</a>6<b>€</b></p>
             <i class="fa-sharp fa-solid fa-star"></i>
