--- a/index.html
+++ b/index.html
@@ -14,111 +14,239 @@
 <body>
 <!--Header-->
     <header>
-        <div id="header"> 
-            <nav class="nav">
-                <img class="logo" src="Images Booki\logo\Booki.png" alt="logo booki"/>
-            <div id="hebergements-activites">
-                <div id="hebergements">
-                    <a class="link_1" href="#hebergements">Hébergements</a>
-                </div>
-                <div id="activites">
-                    <a class="link_2" href="#activites">Activités</a>
-                 </div>
+        <div class="Logo_activite_hebergements"> 
+            <img class="logo" src="Images Booki\logo\Booki.png" alt="logo booki"/>
+            <nav>
+                <ul class="hebergements">
+                    <li>
+                        <a class="link_1" href="#hebergements">Hébergements</a>
+                    </li> 
+                    <li>
+                        <a class="link_2" href="#activites">Activités</a>
+                    </li>
             </nav>
-                </div>
         </div>
-            <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
-                <p>En plein centre-ville ou en pleine nature</p>
+        <div>
+        <h1 class="titre_1">Trouver votre hébergement pour des vacances de rêves</h1>
+        <p>En plein centre-ville ou en pleine nature</p>
 <!--Formulaire-->
             <form id=research action="" method="post">
                 <span><i id=location class="fa-solid fa-location-dot"></i></span>
                 <input class="research_input" type="text" placeholder=Marseille,France>
-                <button class="button" type="submit">Rechercher</button>
+                <button class="button" type="submit"><strong>Rechercher</strong></button>
                 <i id=research_glass class="fa-solid fa-magnifying-glass"></i>
 <!--Filtres-->
         <div class="container">
             <h2>Filtres</h2>
             <div>
-                <i class="fa-solid fa-money-bill-wave"></i>Economique
+                <a><span><i class="fa-solid fa-money-bill-wave"></i></span>Economique</a>
             </div>
             <div>
-                <i class="fa-solid fa-child"></i>Familiale
+                <a><span><i class="fa-solid fa-child"></i></span>Familiale</a>
             </div>
             <div>
-                <i class="fa-solid fa-heart"></i>Romantique
+                <a><span><i class="fa-solid fa-heart"></i></span>Romantique</a>
             </div>
             <div>
-                <i class="fa-solid fa-dog"></i>Animaux
+                <a><span><i class="fa-solid fa-dog"></i></span>Animaux</a>
             </div>
         </div>
-
         <div class="infos">
-            <i class="fa-thin fa-circle-info"></i>
-            <p>Plus de <a>500</a> logements disponibles dans cette ville</p>
+            <p><span><i class="fa-duotone fa-circle-info"></i></span>Plus de <a>500</a> logements disponibles dans cette ville</p>
         </div>
+    </div>
     </header>
 <main>
 <!--Cards Hébergements à Marseille-->
-<section class="hebergements_a_Marseille" id="marseille">
-        <div class="section_1">
-            <h3 class="h3">Hébergements à Marseille</h3>
-        </div>
-        <article class="card_1">
-            <img class=canebiere src="Images Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
-            <p><b>Auberge La Canebière</b></p>
-            <p>Nuit à partir de 2<a>5</a><b>€</b></p>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
+<div class="hebergements-populaires">
+<section>
+    <div class="container_hebergements">
+    <div class="marseille">
+        <h2>Hébergements à Marseille</h2>
+    </div>
+        <article class="card">
+            <a href="#">
+                <img class=canebiere src="Images Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
+            <div>
+                <h3><b>Auberge La Canebière</b></h3>
+                <p>Nuit à partir de 2<a>5</a><b>€</b></p>
+                    <p>
+                        <i class="fa-solid fa-star back_icon"></i>
+                        <i class="fa-solid fa-star back_icon"></i>
+                        <i class="fa-solid fa-star back_icon"></i>
+                        <i class="fa-solid fa-star back_icon"></i>
+                        <i class="fa-solid fa-star grey_star"></i> 
+                    </p>
+            </div>
+            </a>  
         </article>
-        <article class="card_2">
+        <article class="card">
+            <a href="#">
             <img class=port src="Images Booki\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
-            <p><b>Hôtel du port</b></p>
+            <div>
+            <h3><b>Hôtel du port</b></h3>
             <p>Nuit à partir de <a>5</a>2<b>€</b></p>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
+                <p>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star grey_star"></i> 
+                </p>
+            </div>
+        </a>
         </article>
-        <article class="card_3">
-            <img class=mouettes src="Images Booki\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
-            <p><b>Hôtel Les mouettes</b></p>
-            <p>Nuit à partir de <a>7</a>6<b>€</b></p>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
+        <article class="card">
+            <a href="#">
+                <img class=mouettes src="Images Booki\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes">
+            <div>
+                <h3><b>Hôtel Les mouettes</b></h3>
+                <p>Nuit à partir de <a>7</a>6<b>€</b></p>
+            <p>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star grey_star"></i> 
+            </p>
+            </div>
+            </a>
         </article>
-        <article class=card_4>
-            <img class=mer src="Images Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
-            <p><b>Hôtel de la mer</b></p>
-            <p>Nuit à partir de <a>4</a>6<b>€</b></p>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
+        <article class=card>
+            <a href="#">
+                <img class=mer src="Images Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+            <div>   
+                <h3><b>Hôtel de la mer</b></h3>
+                <p>Nuit à partir de <a>4</a>6<b>€</b></p>
+                <p>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star grey_star"></i> 
+                </p>
+            </div> 
+            </a>
         </article>
-        <article class="card_5">
-            <img class=panier src="Images Booki\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
-            <p><b>Auberge Le panier</b></p>
-            <p>Nuit à partir de 2<a>3</a><b>€</b></p>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
+        <article class="card">
+            <a href="#">
+                <img class=panier src="Images Booki\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le panier">
+            <div>
+                <h3><b>Auberge Le panier</b></h3>
+                <p>Nuit à partir de 2<a>3</a><b>€</b></p>
+            <p>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star grey_star"></i> 
+            </p>
+            </div>
+            </a>
         </article>
-        <article class="card_6">
-            <img class=amina src="Images Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
-            <p><b>Hôtel Chez Amina</b></p>
-            <p>Nuit à partir de <a>9</a>6<b>€</b></p>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
-            <i class="fa-sharp fa-solid fa-star"></i>
+        <article class="card">
+            <a href="#">
+                <img class=amina src="Images Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel chez Amina">
+            <div>
+                <h3><b>Hôtel Chez Amina</b></h3>
+                <p>Nuit à partir de <a>9</a>6<b>€</b></p>
+            <p>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star back_icon"></i>
+                <i class="fa-solid fa-star grey_star"></i>
+            </p>
+            </div>
+            </a>
         </article>
-
+    </div>
+    <a>
+        <p>
+            <strong>Afficher plus</strong>
+        </p>
+    </a>
 </section>
+<!--Cards Les plus populaires-->
+<aside>
+    <div>
+        <div>
+            <h2>Les plus populaires</h2>
+            <span><i class="fa-solid fa-chart-line"></i></span>
+        </div>
+            <div>
+                <article>
+                    <a href="#">
+                        <img src="Images Booki\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
+                    <div>
+                    <div>
+                        <h3><b>Hôtel Le soleil du matin</b></h3>
+                        <p>Nuit à partir de 128 <b>€</b></p>
+                    </div>
+                    <p>
+                        <span>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star back_icon"></i>
+                            <i class="fa-solid fa-star grey_star"></i>
+                        </span>
+                    </p>
+                    </div>
+                    </a>
+                </article>
+                <article>
+                    <a href="#">
+                        <img src="Images Booki\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+                    <div>
+                        <div>
+                            <h3><b>Chambres d'hôtes Au coeur de l'eau</b></h3>
+                            <p>Nuit à partir de 71<b>€</b></p>
+                        </div>
+                        <p>
+                            <span>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star grey_star"></i>  
+                            </span>
+                        </p>
+                    </div>
+                </a>
+                </article>
+                <article>
+                    <a href="#">
+                        <img src="Images Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
+                    <div>
+                        <div>
+                            <h3><b>Hôtel Bleu et Blanc</b></h3>
+                            <p>Nuit à partir de 68<b>€</b></p>
+                        </div>
+                        <p>
+                            <span>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star back_icon"></i>
+                                <i class="fa-solid fa-star grey_star"></i> 
+                            </span>
+                        </p>
+                    </div>
+                </a>
+                </article>
+            </div>
+    </div>
+</aside>
+</div>
+    <section>
+        <div>
+            <h2>Activités à Marseille</h2>
+            <div>
+
+            </div>
+        </div>
+    </section>
 </main> 
 </body>
 </html>
