--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
     </header>
 <main>
 <!--Cards Hébergements à Marseille-->
-<div>
-<section class="section-hebergements">
+<div class="container_hebergements_populaires">
+<section class="section_hebergements">
     <div class="section1_part1">
         <div class="title_sectionh2">
             <h2>Hébergements à Marseille</h2>
          </div>
+        <div class="container_card">
         <article class="card">
             <a href="#">
                 <img class=canebiere src="Images_Booki\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Canebière">
@@ -91,13 +92,15 @@
             <div class="section1_text">
                 <h3><b>Hôtel du port</b></h3>
                 <p>Nuit à partir de <a>5</a>2<b>€</b></p>
-                    <p class="star">
-                        <i class="fa-solid fa-star back_icon"></i>
-                        <i class="fa-solid fa-star back_icon"></i>
-                        <i class="fa-solid fa-star back_icon"></i>
-                        <i class="fa-solid fa-star back_icon"></i>
-                        <i class="fa-solid fa-star grey_star"></i> 
-                    </p>
+            </div>
+            <div>
+                <p class="star">
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star back_icon"></i>
+                    <i class="fa-solid fa-star grey_star"></i> 
+                </p>
             </div>
         </a>
         </article>
@@ -107,6 +110,8 @@
             <div class="section1_text">
                 <h3><b>Hôtel Les mouettes</b></h3>
                 <p>Nuit à partir de <a>7</a>6<b>€</b></p>
+            </div>
+            <div>
             <p class="star">
                 <i class="fa-solid fa-star back_icon"></i>
                 <i class="fa-solid fa-star back_icon"></i>
@@ -117,12 +122,14 @@
             </div>
             </a>
         </article>
-        <article class=card>
+        <article class="card">
             <a href="#">
                 <img class=mer src="Images_Booki\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
             <div class="section1_text">   
                 <h3><b>Hôtel de la mer</b></h3>
                 <p>Nuit à partir de <a>4</a>6<b>€</b></p>
+            </div>
+            <div>
                 <p class="star">
                     <i class="fa-solid fa-star back_icon"></i>
                     <i class="fa-solid fa-star back_icon"></i>
@@ -139,6 +146,8 @@
             <div class="section1_text">
                 <h3><b>Auberge Le panier</b></h3>
                 <p>Nuit à partir de 2<a>3</a><b>€</b></p>
+            </div>
+            <div>
             <p class="star">
                 <i class="fa-solid fa-star back_icon"></i>
                 <i class="fa-solid fa-star back_icon"></i>
@@ -155,6 +164,8 @@
             <div class="section1_text">
                 <h3><b>Hôtel Chez Amina</b></h3>
                 <p>Nuit à partir de <a>9</a>6<b>€</b></p>
+            </div>
+            <div>
             <p class="star">
                 <i class="fa-solid fa-star back_icon"></i>
                 <i class="fa-solid fa-star back_icon"></i>
@@ -166,6 +177,7 @@
             </a>
         </article>
     </div>
+    </div>
     <a>
         <p class="afficher">
             <strong>Afficher plus</strong>
@@ -173,14 +185,14 @@
     </a>
 </section>
 <!--Cards Les plus populaires-->
-<aside>
+<aside class="populaires">
     <div>
-        <div>
+        <div class="title_populaires">
             <h2>Les plus populaires</h2>
             <span><i class="fa-solid fa-chart-line"></i></span>
         </div>
             <div>
-                <article>
+                <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
                     <div>
@@ -200,7 +212,7 @@
                     </div>
                     </a>
                 </article>
-                <article>
+                <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
                     <div>
@@ -220,7 +232,7 @@
                     </div>
                 </a>
                 </article>
-                <article>
+                <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
                     <div>
@@ -244,14 +256,6 @@
     </div>
 </aside>
 </div>
-    <section>
-        <div>
-            <h2>Activités à Marseille</h2>
-            <div>
-
-            </div>
-        </div>
-    </section>
 </main> 
 </body>
 </html>
