--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <article class="card">
             <a href="#">
             <img class=port src="Images_Booki\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
-            <div class="section1_text">
+        <div class="section1_text">
                 <h3><b>Hôtel du port</b></h3>
                 <p>Nuit à partir de <a>5</a>2<b>€</b></p>
             </div>
@@ -186,70 +186,78 @@
 </section>
 <!--Cards Les plus populaires-->
 <aside class="populaires">
-    <div>
+    <div class="container_aside">
         <div class="title_populaires">
             <h2>Les plus populaires</h2>
             <span><i class="fa-solid fa-chart-line"></i></span>
         </div>
-            <div>
+        <div class="title_img_card 2">
+            <div class="container_card2">
                 <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
-                    <div>
-                    <div>
+            </div>
+                    <div class="info_card2">
                         <h3><b>Hôtel Le soleil du matin</b></h3>
                         <p>Nuit à partir de 128 <b>€</b></p>
-                    </div>
-                    <p>
-                        <span>
-                            <i class="fa-solid fa-star back_icon"></i>
-                            <i class="fa-solid fa-star back_icon"></i>
-                            <i class="fa-solid fa-star back_icon"></i>
-                            <i class="fa-solid fa-star back_icon"></i>
-                            <i class="fa-solid fa-star grey_star"></i>
-                        </span>
-                    </p>
-                    </div>
+                            <div class="star_populaires">
+                                <p>
+                                    <span>
+                                    <i class="fa-solid fa-star back_icon"></i>
+                                    <i class="fa-solid fa-star back_icon"></i>
+                                    <i class="fa-solid fa-star back_icon"></i>
+                                    <i class="fa-solid fa-star back_icon"></i>
+                                    <i class="fa-solid fa-star grey_star"></i>
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+                        </div>
                     </a>
                 </article>
+                <div class="container_card2">
                 <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
-                    <div>
-                        <div>
+                    </div>
+                        <div class="info_card2">
                             <h3><b>Chambres d'hôtes Au coeur de l'eau</b></h3>
                             <p>Nuit à partir de 71<b>€</b></p>
+                                <div class="star_populaires">
+                                    <p>
+                                        <span>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star grey_star"></i>  
+                                        </span>
+                                    </p>
+                                </div>
                         </div>
-                        <p>
-                            <span>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i>  
-                            </span>
-                        </p>
-                    </div>
                 </a>
                 </article>
+                <div class="container_card2">
                 <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
-                    <div>
-                        <div>
+                    </div>
+                        <div class="info_card2">
                             <h3><b>Hôtel Bleu et Blanc</b></h3>
                             <p>Nuit à partir de 68<b>€</b></p>
+                                <div class="star_populaires">
+                                    <p>
+                                        <span>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star back_icon"></i>
+                                        <i class="fa-solid fa-star grey_star"></i> 
+                                        </span>
+                                    </p>
+                                </div>
                         </div>
-                        <p>
-                            <span>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star back_icon"></i>
-                                <i class="fa-solid fa-star grey_star"></i> 
-                            </span>
-                        </p>
-                    </div>
+                        </div>
                 </a>
                 </article>
             </div>
