--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <header>
         <div class="container_header"> 
             <img class="logo" src="Images_Booki\logo\Booki.png" alt="logo booki"/>
-                <nav>
+                <nav class="link">
                      <ul>
-                        <li><a class="link_1" href="#hebergements">Hébergements</a></li>
+                        <span><li><a class="link_1" href="#hebergements">Hébergements</a></li></span>
                     </ul>
                     <ul>
-                        <li><a class="link_2" href="#activites">Activités</a></li>
+                        <span><li><a class="link_2" href="#activites">Activités</a></li></span>
                     </ul>    
                 </nav>
         </div>
@@ -186,20 +186,17 @@
 </section>
 <!--Cards Les plus populaires-->
 <aside class="populaires">
-    <div class="container_aside">
         <div class="title_populaires">
             <h2>Les plus populaires</h2>
             <span><i class="fa-solid fa-chart-line"></i></span>
         </div>
-        <div class="title_img_card 2">
-            <div class="container_card2">
                 <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin">
-            </div>
-                    <div class="info_card2">
+                 <div class="info_card2">
                         <h3><b>Hôtel Le soleil du matin</b></h3>
                         <p>Nuit à partir de 128 <b>€</b></p>
+                  </div>      
                             <div class="star_populaires">
                                 <p>
                                     <span>
@@ -211,18 +208,15 @@
                                     </span>
                                 </p>
                             </div>
-                        </div>
-                        </div>
-                    </a>
+                        </a>
                 </article>
-                <div class="container_card2">
                 <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
-                    </div>
                         <div class="info_card2">
                             <h3><b>Chambres d'hôtes Au coeur de l'eau</b></h3>
                             <p>Nuit à partir de 71<b>€</b></p>
+                        </div> 
                                 <div class="star_populaires">
                                     <p>
                                         <span>
@@ -234,18 +228,16 @@
                                         </span>
                                     </p>
                                 </div>
-                        </div>
-                </a>
+                            </a>
                 </article>
-                <div class="container_card2">
                 <article class="card2">
                     <a href="#">
                         <img src="Images_Booki\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Bleu et Blanc">
-                    </div>
-                        <div class="info_card2">
+                    <div class="info_card2">
                             <h3><b>Hôtel Bleu et Blanc</b></h3>
                             <p>Nuit à partir de 68<b>€</b></p>
-                                <div class="star_populaires">
+                        </div>
+                        <div class="star_populaires">
                                     <p>
                                         <span>
                                         <i class="fa-solid fa-star back_icon"></i>
@@ -256,14 +248,40 @@
                                         </span>
                                     </p>
                                 </div>
-                        </div>
-                        </div>
-                </a>
+                          </a>
                 </article>
-            </div>
-    </div>
-</aside>
-</div>
+         </aside>
+<section>
+    <div class="Activites_a_marseille">
+        <h2>Activités à Marseille</h2>
+        <div>
+            <article>
+                <a href>
+                    <img src="Images_Booki\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
+                    <h3>Vieux Port</h3>
+                </a>
+            </article>
+            <article>
+                <a href>
+                    <img src="Images_Booki\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
+                    <h3>Fort de Pomègues</h3>
+                </a>
+            </article>
+            <article>
+                <a href>
+                    <img src="Images_Booki\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
+                    <h3>Parc national des Calanques</h3>
+                 </a>
+            </article>
+            <article>
+                <a href>
+                    <img src="Images_Booki\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </a>
+            </article>
+        </div>
+        </div>
+</section>
 </main> 
 </body>
 </html>
