--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             <img class="logo" src="Images_Booki\logo\Booki.png" alt="logo booki"/>
                 <nav class="link">
                      <ul>
-                        <span><li><a class="link_1" href="#hebergements">Hébergements</a></li></span>
-                    </ul>
-                    <ul>
-                        <span><li><a class="link_2" href="#activites">Activités</a></li></span>
+                        <li>
+                            <a class="link_1" href="#hebergements">Hébergements</a>
+                        </li>
+                        <li>
+                            <a class="link_2" href="#activites">Activités</a>
+                        </li>
                     </ul>    
                 </nav>
         </div>
@@ -251,38 +253,88 @@
                           </a>
                 </article>
          </aside>
-<section>
+<!--Activités à Marseille-->
+<section class="main_activites">
     <div class="Activites_a_marseille">
-        <h2>Activités à Marseille</h2>
-        <div>
-            <article>
-                <a href>
+        <h2 class="activites_marseille">Activités à Marseille</h2>
+        <div class="images">
+            <div class="colonnes">
+            <article class="img_h3">
+                <a href ="#">
                     <img src="Images_Booki\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
                     <h3>Vieux Port</h3>
                 </a>
             </article>
-            <article>
-                <a href>
+            </div>
+            <div class="colonnes">
+            <article class="img_h3">
+                <a href ="#">
                     <img src="Images_Booki\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                     <h3>Fort de Pomègues</h3>
                 </a>
             </article>
-            <article>
-                <a href>
+            </div>
+            <div class="colonnes">
+            <article class="img_h3">
+                <a href="#">
                     <img src="Images_Booki\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
                     <h3>Parc national des Calanques</h3>
                  </a>
             </article>
-            <article>
-                <a href>
+            </div>
+            <div class="colonnes">
+            <article class="img_h3">
+                <a href="#">
                     <img src="Images_Booki\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                     <h3>Notre-Dame-de-la-Garde</h3>
                 </a>
             </article>
         </div>
         </div>
+        </div>
 </section>
 </main> 
+<!--Footer-->
+<footer>
+    <div class="footer_container">
+    <div class="footer_colonnes">
+        <h2>À propos</h2>
+        <ul>
+            <li>
+                <a href="#">Fonctionnement du site</a>
+            </li>
+            <li>
+                <a href="#">Conditions générales</a>
+            </li>
+            <li>
+                <a href="#">Données et confidentialité</a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer_colonnes">
+        <h2>Nos hébergements</h2>
+        <ul>
+            <li>
+                <a href="#">Charte qualité</a>
+            </li>
+            <li>
+                <a href="#">Proposer votre hôtel</a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer_colonnes">
+        <h2>Assistance</h2>
+        <ul>
+            <li>
+                <a href="#">Centre d'aide</a>
+            </li>
+            <li>
+                <a href="#">Nous contacter</a>
+            </li>
+        </ul>
+    </div>
+</div> 
+</footer>
 </body>
 </html>
 
